Updated css/trending.css and style.css to fix drinks section on mobile site not aligning properly

--- a/css/sections/trending.css
+++ b/css/sections/trending.css
@@ -107,7 +107,7 @@
   background-image: url("../../assets/japanese_sushi.png");
 }
 
-.trending-drink .trending__image {
+.trending-drinks .trending__image {
   background-image: url("../../assets/japanese_drinks.png");
 }
 
@@ -118,25 +118,25 @@
 }
 
 .trending__image discover {
-    position: absolute;
-    top: 44%;
-    left: 44%;
-    z-index: 1;
-    width: 160px;
-    height: 160px;
-    background-color: var(--secondary-color);
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  top: 44%;
+  left: 44%;
+  z-index: 1;
+  width: 160px;
+  height: 160px;
+  background-color: var(--secondary-color);
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .trending__discover p {
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 500;
-    font-family: var(--plus-jakarta-sans);
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 500;
+  font-family: var(--plus-jakarta-sans);
 }
 
 /* Arrows */
